--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,9 @@
 
   <base href="/">
 
-  <!-- build:vendor -->
+  <!-- build:polyfills -->
+  <script src="polyfills.min.js"></script>
   <!-- endbuild -->
-
-  <!-- 1. Load libraries -->
-  <!-- Polyfill(s) for older browsers -->
-  <script src="lib/core-js/client/shim.min.js"></script>
-
-  <script src="lib/zone.js/dist/zone.js"></script>
-  <script src="lib/reflect-metadata/Reflect.js"></script>
-  <script src="lib/systemjs/dist/system.src.js"></script>
 
   <!-- 2. Configure SystemJS -->
   <script src="systemjs.config.js"></script>
