JS-27: Bundle app and libraries

--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,11 @@
   <script src="polyfills.min.js"></script>
   <!-- endbuild -->
 
-  <!-- 2. Configure SystemJS -->
-  <script src="systemjs.config.js"></script>
-
+  <!-- build:app -->
+  <script src="app.bundle.js"></script>
+  <!-- endbuild -->
 </head>
 
-<!-- 3. Display the application -->
 <body>
 <app>Loading...</app>
 </body>
