--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <base href="/">
 
   <!-- build:polyfills -->
-  <script src="lib/core-js/client/shim.min.js"></script>
+  <script src="node_modules/core-js/client/shim.min.js"></script>
 
-  <script src="lib/zone.js/dist/zone.js"></script>
-  <script src="lib/reflect-metadata/Reflect.js"></script>
-  <script src="lib/systemjs/dist/system.src.js"></script>
+  <script src="node_modules/zone.js/dist/zone.js"></script>
+  <script src="node_modules/reflect-metadata/Reflect.js"></script>
+  <script src="node_modules/systemjs/dist/system.src.js"></script>
   <!-- endbuild -->
 
   <!-- build:app -->
