--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <base href="/">
+
+  <!-- build:css -->
+  <link rel="stylesheet" href="./app/styles/main.css">
+  <!-- endbuild -->
 </head>
 
 <body>
