--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <!-- build:css -->
   <link rel="stylesheet" href="./app/styles/main.css">
+  <link rel="stylesheet" href="./app/styles/autocomplete-dropdown/autocomplete-dropdown.component.css">
   <!-- endbuild -->
 </head>
 
