--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
   <script src="node_modules/zone.js/dist/zone.js"></script>
   <script src="node_modules/reflect-metadata/Reflect.js"></script>
   <script src="node_modules/systemjs/dist/system.src.js"></script>
+  <!-- endbuild -->
 
+  <!-- build:libs -->
+  <script src="node_modules/hammerjs/hammer.min.js"></script>
   <!-- endbuild -->
 
   <!-- build:app -->
-  <script src="node_modules/hammerjs/hammer.min.js"></script>
   <script src="systemjs.config.js"></script>
   <script>
     SystemJS.import('app')
