Added bootstrap 4 grid

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <base href="/">
 
   <!-- build:css -->
+  <link rel="stylesheet" href="./assets/bootstrap-grid/bootstrap-grid.min.css">
   <link rel="stylesheet" href="./app/styles/main.css">
   <!-- endbuild -->
 </head>
