--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <!-- build:css -->
   <link rel="stylesheet" href="./assets/bootstrap-grid/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="./assets/fonts/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="./app/styles/main.css">
   <!-- endbuild -->
 </head>
