--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- build:css -->
   <link rel="stylesheet" href="./assets/bootstrap-grid/bootstrap-flex.min.css">
   <link rel="stylesheet" href="./assets/fonts/font-awesome/css/font-awesome.min.css">
-  <!--<link rel="stylesheet" href="./app/styles/main.css">-->
+  <link rel="stylesheet" href="./app/styles/main.css">
   <!-- endbuild -->
 </head>
 <body>
