App width should now be as intended. max 1199 px and below that 100%

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
   <base href="/">
 </head>
 <body>
-  <app class="container block">Loading...</app>
+  <app class="app-container block">Loading...</app>
 </body>
 </html>
