Add translations to initial loading screen

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,11 @@
   <!-- End Google Tag Manager (noscript) -->
   <app class="app-container block">
     <div class="ui active inverted dimmer">
-      <div class="ui text large loader">Loading</div>
+      <div class="ui text large loader">
+        Laddar..<br><br>
+        <span dir="ltr" style="direction:rtl">جار التحميل...</span><br><br>
+        Loading.. <br><br>
+      </div>
     </div>
   </app>
 </body>
