Refactored navigation component

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PHP5J5T"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
-  <app class="app-container block">
+  <app>
     <div class="ui active inverted dimmer">
       <div class="ui text large loader">
         Laddar..<br><br>
