--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,11 @@
     })(window, document, 'script', 'dataLayer', 'GTM-PHP5J5T');
   </script>
   <!-- End Google Tag Manager -->
+  <meta charset="utf-8">
   <title>Just Arrived</title>
+  <meta name="description" content=""/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <base href="/">
 </head>
