Implemented A Page Component class and used it to handle meta tag content.

--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,12 @@
   <title>Just Arrived</title>
 
   <!-- Robots -->
-  <meta name="title" content="Just Arrived"/>
   <meta name="description" content="We give newcomers in Sweden a chance to enter the labor market"/>
 
-  <meta name="google" content="notranslate" />
+  <!-- <meta name="google" content="notranslate" /> Uncomment to disable google translation when we have better language support. -->
 
   <!-- Humans -->
-  <meta name="author" content="Just Arrived">
+  <meta name="author" content="Just Arrived"/>
 
   <meta property="og:site_name" content="Just Arrived"/>
   <meta property="og:url" content="https://app.justarrived.se"/>
@@ -38,9 +37,7 @@
   <meta property="og:title" content="Just Arrived"/>
   <meta property="og:description" content="We give newcomers in Sweden a chance to enter the labor market"/>
   <meta property="og:image" content="/assets/images/logo.png"/>
-  <meta property="og:locale" content="en"/>
-  <meta property="og:locale:alternate" content="sv"/>
-  <meta property="og:locale:alternate" content="ar"/>
+  <meta property="og:locale" content="sv"/>
 
   <!-- Browsers -->
   <meta name="HandheldFriendly" content="True"/>
