Add alternate language hrefs

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,12 @@
   <!-- Robots -->
   <meta name="description" content="We give newcomers in Sweden a chance to enter the labor market"/>
 
+  <link rel="alternate" href="https://app.justarrived.se/?locale=en" hreflang="en" />
+  <link rel="alternate" href="https://app.justarrived.se/?locale=ar" hreflang="ar" />
+  <link rel="alternate" href="https://app.justarrived.se/?locale=sv" hreflang="sv" />
+  <link rel="alternate" href="https://app.justarrived.se/" hreflang="x-default" />
+
+
   <!-- <meta name="google" content="notranslate" /> Uncomment to disable google translation when we have better language support. -->
 
   <!-- Humans -->
