--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
+  <link rel="manifest" href="/assets/manifest.json">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico"/>
   <link rel="apple-touch-icon" href="apple-touch-icon.ico"/>
   <!--[if IE]>
