--- a/src/index.html
+++ b/src/index.html
@@ -82,6 +82,16 @@
       </div>
     </div>
   </app>
+
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/service-worker.js').then(function(registration) {
+        console.log('Service Worker registered');
+      }).catch(function(err) {
+        console.log('Service Worker registration failed: ', err);
+      });
+    }
+  </script>
 </body>
 
 </html>
