Update locale styling for offline page

--- a/src/offline.html
+++ b/src/offline.html
@@ -68,11 +68,16 @@ limitations under the License.
 
       .locale-nav a {
         padding: 18px;
+        padding-left: 0;
+        font-size: 14px;
       }
 
       @media screen and (max-width: 480px) {
         .locale-nav a {
-          padding: 8px;
+          padding: 0;
+          padding-bottom: 4px;
+          padding-top: 4px;
+          padding-right: 8px;
           display: block;
         }
       }
