Add meta-tag theme-color to index.html & offline.html

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,8 @@
   <meta charset="utf-8"/>
   <title>Just Arrived</title>
 
+  <meta name="theme-color" content="#222531">
+
   <!-- Robots -->
   <meta name="description" content="We give newcomers in Sweden a chance to enter the labor market"/>
 
