--- a/src/offline.html
+++ b/src/offline.html
@@ -20,6 +20,7 @@ limitations under the License.
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sorry! - معذرة! - Förlåt!</title>
+    <meta name="theme-color" content="#222531">
     <style>
       body {
         font-family: sans-serif;
